--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Calculator</title>
   <link rel="stylesheet" href="calculator.css">
 </head>
-<body>
+<body class="bg-margin">
   <div class="container card card-width mt-5 ">
     <div class="text-center ">
         <h1 class="pt-3"><b>Calculator</b></h1>
